# haskell-cpu-instruction-counter

./: LICENSE  README.md  cpu-instruction-counter.cabal
System/: CPUInstructionCounter.hsc
cbits/linux/: perfcounters.c  perfcounters.h
test/: Main.hs
